third_party/blink/web_tests/external/wpt/credential-management/idlharness.https.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
PASS Partial dictionary CredentialRequestOptions: original dictionary defined
PASS Partial dictionary CredentialCreationOptions: original dictionary defined
PASS Partial dictionary CredentialRequestOptions[2]: original dictionary defined
PASS Partial dictionary CredentialCreationOptions[2]: original dictionary defined
PASS Credential interface: existence and properties of interface object
PASS Credential interface object length
PASS Credential interface object name
PASS Credential interface: existence and properties of interface prototype object
PASS Credential interface: existence and properties of interface prototype object's "constructor" property
PASS Credential interface: existence and properties of interface prototype object's @@unscopables property
PASS Credential interface: attribute id
PASS Credential interface: attribute type
PASS CredentialsContainer interface: existence and properties of interface object
PASS CredentialsContainer interface object length
PASS CredentialsContainer interface object name
PASS CredentialsContainer interface: existence and properties of interface prototype object
PASS CredentialsContainer interface: existence and properties of interface prototype object's "constructor" property
PASS CredentialsContainer interface: existence and properties of interface prototype object's @@unscopables property
PASS CredentialsContainer interface: operation get(CredentialRequestOptions)
PASS CredentialsContainer interface: operation store(Credential)
PASS CredentialsContainer interface: operation create(CredentialCreationOptions)
PASS CredentialsContainer interface: operation preventSilentAccess()
PASS PasswordCredential interface: existence and properties of interface object
PASS PasswordCredential interface object length
PASS PasswordCredential interface object name
PASS PasswordCredential interface: existence and properties of interface prototype object
PASS PasswordCredential interface: existence and properties of interface prototype object's "constructor" property
PASS PasswordCredential interface: existence and properties of interface prototype object's @@unscopables property
PASS PasswordCredential interface: attribute password
PASS PasswordCredential interface: attribute name
PASS PasswordCredential interface: attribute iconURL
PASS FederatedCredential interface: existence and properties of interface object
PASS FederatedCredential interface object length
PASS FederatedCredential interface object name
PASS FederatedCredential interface: existence and properties of interface prototype object
PASS FederatedCredential interface: existence and properties of interface prototype object's "constructor" property
PASS FederatedCredential interface: existence and properties of interface prototype object's @@unscopables property
PASS FederatedCredential interface: attribute provider
PASS FederatedCredential interface: attribute protocol
PASS FederatedCredential interface: attribute name
PASS FederatedCredential interface: attribute iconURL
Harness: the test ran to completion.

